--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <title>TakeDash</title>
+    <!-- Google Sign-In JavaScript library for wallet authentication -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
